<resources>
    <string name="app_name">Comics Checklist</string>
    <string name="bottom_bar_image_description">Bottom image</string>
    <string name="activity_title_comic_detail">Dettagli</string>
    <string name="activity_title_add_comic">Aggiungi uscita</string>
    <string name="activity_title_chose_content">Scegli una lista</string>
    <string name="activity_bottom_text_store">Fumetterie</string>
    <string name="activity_bottom_text_add">Aggiungi</string>
    <string name="activity_bottom_text_refresh">Aggiorna</string>
    <string name="add_shortcut_short_label">Aggiungi uscita</string>
    <string name="add_shortcut_long_label">Aggiungi un fumetto alla lista</string>
    <string name="add_disabled_message">Aggiungi uscita disabilitata</string>
    <string name="search_shortcut_short_label">Cerca fumetterie</string>
    <string name="search_shortcut_long_label">Cerca fumetterie nelle vicinanze</string>
    <string name="search_disabled_message">Cerca fumetterie disabilitata</string>
    <string name="dialog_help_title">Guida</string>
    <string name="dialog_og_text">Applicazione sviluppata da un idea di Francesco Bevilacqua, fondatore e admin di www.opengeek.it .\nPotete seguirne l\'evoluzione sulla pagina ufficiale di Google+!</string>
    <string name="dialog_bp_text">Realizzazione grafica, ottimizzazione, pubblicazione e promozione di Purple Soc. Coop. www.bitpurple.com .</string>
    <string name="dialog_other_text">Launcher icon design by Alexis Boudal www.behance.net/boudalalexis .</string>
    <string name="dialog_disclaimer_text">Tutti i marchi, i loghi e i simboli presenti nell\'applicazione sono dei rispettivi proprietari.\nPurple Soc. Coop. non è in alcun modo affiliata ai siti utilizzati come feed di informazioni.\nL\'applicazione è da intendersi come metodo aggiuntivo per la fruizione dei contenuti diffusi dai rispettivi proprietari.</string>
    <string name="dialog_changelog_title_text">Changelog</string>
    <string name="dialog_changelog_text"><i>1.8</i>\n&#8195;&#8226;&#8195;Aggiornata la ricerca dei fumetti\n&#8195;&#8226;&#8195;Le uscite Marvel e Planet Manga sono integrate nella sezione Panini Comics\n&#8195;&#8226;&#8195;Nuova icona circolare (per restare alla moda!)\n<i>1.7</i>\n&#8195;&#8226;&#8195;Fix nella ricerca dei fumetti SB\n<i>1.6</i>\n&#8195;&#8226;&#8195;Aggiunta nuova opzione nelle impostazioni\n<i>1.5</i>\n&#8195;&#8226;&#8195;Fix nella ricerca dei fumetti\n&#8195;&#8226;&#8195;Minor UI bug fix\n<i>1.4</i>\n&#8195;&#8226;&#8195;Android Nougat ready\n&#8195;&#8226;&#8195;Data backup su Google account (se abilitato)\n&#8195;&#8226;&#8195;Nuove opzioni di ordinamento e gestione dati\n&#8195;&#8226;&#8195;Minor bug fix\n<i>1.3</i>\n&#8195;&#8226;&#8195;Nuovo menu di navigazione\n&#8195;&#8226;&#8195;Link all\'editore del fumetto\n&#8195;&#8226;&#8195;Nuovo pulsante \'Aggiungi fumetto\' sui widget\n&#8195;&#8226;&#8195;UI \'Aggiungi fumetto\' migliorata\n&#8195;&#8226;&#8195;Minor bug fix\n<i>1.2</i>\n&#8195;&#8226;&#8195;Migliorata UI delle impostazioni\n&#8195;&#8226;&#8195;Migliorata la visibilità dei titoli dei fumetti\n&#8195;&#8226;&#8195;Widget degli editori\n&#8195;&#8226;&#8195;Nuova icona dell\’app (Mark II)\n&#8195;&#8226;&#8195;Bug fix nella ricerca in linea dei fumetti\n&#8195;&#8226;&#8195;Bug fix lista dei prefereti e da comprare\n<i>1.1</i>\n&#8195;&#8226;&#8195;Widget dei fumetti preferiti\n&#8195;&#8226;&#8195;Notifiche push (disattivabili)\n&#8195;&#8226;&#8195;Ricerca interna dei fumetti\n&#8195;&#8226;&#8195;Nuovo costume in Material Design</string>
    <string name="dialog_libraries_title_text">Librerie</string>
    <string name="dialog_help_home">Home</string>
    <string name="dialog_help_home_text">Clicca su l\'icona nel menu in alto a sinistra per aprire la schermata laterale (oppure effettua uno swipe da sinistra verso destra) e seleziona una delle opzioni per visualizzare le prossime uscite.</string>
    <string name="dialog_help_list">Lista delle uscite</string>
    <string name="dialog_help_list_text">Clicca su un elemento della lista per avere più informazioni. Puoi aggiornare la lista di un editore facendo scorrere verso il basso la lista.</string>
    <string name="dialog_help_detail">Schermata dettagli</string>
    <string name="dialog_help_detail_text">In questa schermata potrai salvare l\'uscita del fumetto sul calendario, salvare la serie tra i tuoi preferiti oppure aggiungerlo alla lista da comprare.</string>
    <string name="dialog_help_favorite">Lista preferiti</string>
    <string name="dialog_help_favorite_text">Questa sezione caricherà solo i fumetti che sono stati inseriti tra i preferiti. Puoi togliere i fumetti effettuando un long-click su un elemento.</string>
    <string name="dialog_help_buy">Da comprare</string>
    <string name="dialog_help_buy_text">In questa sezione trovi tutti i fumetti contrassegnati come "da comprare". Puoi aggiungere manualmente uno o pi\ù fumetti alla lista, cliccando sul bottone + presente in tutte le schermate. Puoi togliere i fumetti dalla lista effettuando un long-click su un elemento.</string>
    <string name="dialog_help_settings">Impostazioni</string>
    <string name="dialog_help_settings_text">Nelle impostazioni potrai:\n - scegliere se visualizzare le notifiche durante la ricerca delle uscite;\n - abilitare le notifiche push quando un fumetto tra i preferiti è disponibile in edicola o fumetteria;\n - impostare ogni quanto effettuare la ricerca automatica e dopo quanto tempo cancellare le uscite più vecchie;\n - scegliere l\'ordinamento delle uscite nella lista;\n - scegliere gli editori da seguire.\nPotrai sempre decidere se fare la ricerca manualmente e/o mantenere le uscite più vecchie.</string>
    <string name="dialog_rate_text">Comics Checklist non usa nessun banner pubblicitario, è completamente gratuita e non richiede permessi invasivi.\nSe l\'applicazione ti è stata utile lascia un commento su Google Play.\nGrazie per il tuo supporto!</string>
    <string name="dialog_rate_button">Recensisci ora!</string>
    <string name="dialog_late_button">Più tardi</string>
    <string name="dialog_confirm_button">OK</string>
    <string name="dialog_undo_button">Annulla</string>
    <string name="dialog_no_thanks_button">No, grazie</string>
    <string name="dialog_author_title_text">Autore</string>
    <string name="dialog_publisher_title_text">Distribuito da</string>
    <string name="dialog_award_title_text">Riconoscimenti</string>
    <string name="dialog_disclaimer_title_text">Disclaimer</string>
    <string name="dialog_jsoup_title_text">jsoup</string>
    <string name="dialog_jsoup_link">https://jsoup.org/</string>
    <string name="dialog_jsoup_copyright">Copyright 2009 &#8211; 2016 Jonathan Hedley</string>
    <string name="dialog_jsoup_license">Licensed used under the MIT License</string>
    <string name="dialog_picasso_title_text">Picasso</string>
    <string name="dialog_picasso_link">http://square.github.io/picasso/</string>
    <string name="dialog_picasso_copyright">Copyright 2013 Square, Inc.</string>
    <string name="dialog_picasso_license">Licensed used under the Apache License, v2.0</string>
    <string name="dialog_delete_content_title">Scegli un editore</string>
    <string name="dialog_last_sync_title">Ultime sincronizzazioni</string>
    <string name="dialog_context_action">Scegli cosa fare</string>
    <string-array name="dialog_available_actions">
        <item>Togli dalla lista</item>
        <item>Cancella tutta la lista</item>
    </string-array>
    <string name="dialog_pick_editor_title">Scegli un editore</string>
    <string name="drawer_open">Apri la barra di navigazione</string>
    <string name="drawer_close">Chiudi la barra di navigazione</string>
    <string name="drawer_title_2">Editori disponibili</string>
    <string name="drawer_title_3">Varie</string>
    <string name="title_section1">Lista preferiti</string>
    <string name="title_section2">Da comprare</string>
    <string name="title_section3">Panini Comics</string>
    <string name="title_section4">Star Comics</string>
    <string name="title_section5">Sergio Bonelli</string>
    <string name="title_section6">RW Edizioni</string>
    <string name="title_section7">Impostazioni</string>
    <string name="title_section8">Segui su Google+</string>
    <string name="title_section9">Guida</string>
    <string name="title_section10">Info</string>
    <string-array name="widget_sections_array">
        <item>Lista preferiti</item>
        <item>Da comprare</item>
    </string-array>
    <string name="widget_label">CC Widget</string>
	<string name="menu_calendar">Aggiungi uscita al calendario</string>
    <string name="menu_comic_site">Sito web</string>
	<string name="menu_favorites">Aggiungi ai preferiti</string>
    <string name="menu_wishlist">Da comprare</string>
    <string name="menu_remove_favorites">Togli dai preferiti</string>
    <string name="menu_remove_wishlist">Togli da comprare</string>
    <string name="context_menu_delete_comic">Togli dalla lista</string>
    <string name="context_menu_delete_all">Cancella tutta la lista</string>
    <string name="search_hint">Cerca un fumetto</string>
    <string name="search_title">Cerca</string>
    <string name="search_description">Inserisci il nome del fumetto che cerchi.</string>
    <string name="search_error">Impossibile reperire ulteriori dettagli sul fumetto.</string>
    <string name="search_no_result">Non ci sono fumetti che contengono il testo inserito.</string>
    <string name="search_result">Risultati ricerca</string>
    <string name="pref_header_data_sync">Sincronizzazione dati</string>
    <string name="pref_title_last_sync">Data ultime ricerche</string>
    <string name="pref_summary_last_sync">Consulta quando sono state effettuate le ultime ricerche per ogni editore</string>
    <string name="pref_title_sync_frequency">Frequenza sincronizzazione</string>
    <string-array name="pref_sync_frequency_titles">
        <item>ogni giorno</item>
        <item>ogni 2 giorni</item>
        <item>ogni 3 giorni</item>
        <item>ogni 4 giorni</item>
        <item>ogni 5 giorni</item>
        <item>ogni 6 giorni</item>
        <item>ogni 1 settimana</item>
        <item>Mai, lo farò manualmente</item>
    </string-array>
    <string name="pref_title_delete_frequency">Elimina le uscite più vecchie</string>
    <string name="pref_title_data_order">Ordina la lista</string>
    <string name="pref_header_notifications">Notifiche</string>
    <string name="pref_title_notifications">Stato ricerca</string>
    <string name="pref_summary_notifications">Mostra lo stato della ricerca dei dati nella barra delle notifiche</string>
    <string name="pref_title_notification_favorite">Preferiti</string>
    <string name="pref_summary_notification_favorite">Verrai avvertito tramite notifiche push se uno dei tuoi fumetti preferiti è disponibile</string>
    <string name="pref_title_available_editor">Editori disponibili</string>
    <string name="pref_summary_available_editor">Salva memoria e tempo: seleziona solo gli editori che vuoi seguire</string>
    <string name="pref_title_delete_content">Cancella uscite</string>
    <string name="pref_summary_delete_content">Seleziona un editore dalla lista per cancellare le relative uscite (ATTENZIONE: le uscite presenti nelle sezioni "Da comprare" o "Liste preferiti" non verranno cancellate)</string>
    <string name="empty_list">La lista è vuota!</string>
    <string name="description_opengeek_image">OpenGeek logo</string>
    <string name="description_bitpurple_image">BitPurple logo</string>
    <string name="description_widget_button">Add new comic as note</string>
    <string name="pref_header_data_filter">Filtri della lista</string>
</resources>