<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/calendar"
        android:icon="@drawable/ic_insert_invitation"
        android:title="@string/menu_calendar"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_grade"
        android:title="@string/menu_favorites"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/remove_favorite"
        android:icon="@drawable/ic_star_border"
        android:title="@string/menu_remove_favorites"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/buy"
        android:icon="@drawable/ic_cart"
        android:title="@string/menu_wishlist"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/remove_buy"
        android:icon="@drawable/ic_remove_shopping_cart"
        android:title="@string/menu_remove_wishlist"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
</menu>
