<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:id="@+id/notification"
        android:fragment="org.checklist.comics.comicschecklist.ActivitySettings$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications"
        android:title="@string/pref_header_notifications" />

    <header
        android:id="@+id/data_sync"
        android:fragment="org.checklist.comics.comicschecklist.ActivitySettings$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_cached"
        android:title="@string/pref_header_data_sync" />

    <header
        android:id="@+id/data_filter"
        android:fragment="org.checklist.comics.comicschecklist.ActivitySettings$DataFilterPreferenceFragment"
        android:icon="@drawable/ic_filter"
        android:title="@string/pref_header_data_filter" />

</preference-headers>
