<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="sync_frequency"
        android:title="@string/pref_title_sync_frequency"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:defaultValue="3"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="delete_frequency"
        android:title="@string/pref_title_delete_frequency"
        android:entries="@array/pref_delete_frequency_titles"
        android:entryValues="@array/pref_delete_frequency_values"
        android:defaultValue="-1"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="data_order"
        android:title="@string/pref_title_data_order"
        android:entries="@array/pref_data_order_titles"
        android:entryValues="@array/pref_data_order_values"
        android:defaultValue="ASC"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>
